[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/scaffolder/src/gui/style_box_flat_scalable.gd" type="Script" id=1]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_label.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_panel_container.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/gui/game_radial_menu_label.gd" type="Script" id=5]
[ext_resource path="res://src/gui/energy_label.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0, 0, 0, 0.4 )
border_color = Color( 0, 0, 0, 0 )
corner_detail = 1
shadow_color = Color( 0, 0, 0, 0 )
script = ExtResource( 1 )

[node name="GameRadialMenuLabel" type="Node2D"]
script = ExtResource( 5 )

[node name="ScaffolderPanelContainer" parent="." instance=ExtResource( 4 )]
custom_styles/panel = SubResource( 4 )
style = 5
is_unique = true
content_margin_left_override = 4
content_margin_top_override = 4
content_margin_right_override = 4
content_margin_bottom_override = 4

[node name="VBoxContainer" type="VBoxContainer" parent="ScaffolderPanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 30.0
margin_bottom = 54.0
custom_constants/separation = 0

[node name="Description" parent="ScaffolderPanelContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 26.0
margin_bottom = 14.0
font_size = "S"

[node name="EnergyLabel" parent="ScaffolderPanelContainer/VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 14.0
margin_right = 26.0
margin_bottom = 36.0
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 0.992157, 1, 0.439216, 1 )

[node name="DisablementExplanation" parent="ScaffolderPanelContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 36.0
margin_right = 26.0
margin_bottom = 50.0
